<resources>
    <string name="app_name">OutsourceServiceProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_morning">早上好</string>
    <string name="good_afternoon">中午好</string>
    <string name="good_evening">晚上好</string>
    <string name="greeting">让我们看看能帮您做些什么?</string>
    <string name="voice_generation">AI 智能合成</string>
    <string name="voice_generation_subline">AI 快速成就自信声音</string>
    <string name="text_to_voice">AI 智能文本转换</string>
    <string name="text_to_voice_subline">将文本转换为自然语音</string>
    <string name="generation_start">开始创作</string>
    <string name="PPT_to_voice">人工智能PPT讲解</string>
    <string name="PPT_to_voice_subline">AI 一键讲解PPT</string>
    <string name="voice_recommended">推荐声音</string>
    <string name="voice_info">AI声音描述</string>
    <string name="voice_info_subline">声音详细描述文本</string>
    <string name="voice_duration">0:00</string>
    <string name="back">Back</string>
    <string name="input_verification_code">输入验证码</string>
    <string name="verification_code_sent_to_email">我们刚刚通过您的电子邮件</string>
    <string name="continue_text">继续</string>
    <string name="no_code_resend">没有收到验证码? 重新发送验证码</string>
    <string name="please_enter_verification_code">Please enter the verification code</string>
    <string name="verification_code_resent">Verification code has been resent</string>
    <string name="upgrade_plan">升级计划</string>
    <string name="monthly">每月</string>
    <string name="yearly">每年</string>
    <string name="premium_plan">升级高级计划</string>
    <string name="monthly_price">¥ 25.9/月</string>
    <string name="yearly_price">¥ 188/年</string>
    <string name="pay_monthly">支付 - ¥ 25.9</string>
    <string name="pay_yearly">支付 - ¥ 188</string>
    <string name="feature_no_ads">纯净无广告体验</string>
    <string name="feature_unlimited_ai">无限制访问所有人工智能助手</string>
    <string name="feature_faster_response">响应速度更快</string>
    <string name="feature_more_storage">存储空间更大</string>
    <string name="feature_24h_support">24h全程线上客户支持</string>
    <string name="feature_priority_access">新功能优先体验</string>
    <string name="audio_name">AI Audio Converter</string>
    <string name="ai_audio_converter">AI 智能变声器</string>
    <string name="upload_file">上传文件</string>
    <string name="record">录音</string>
    <string name="upload_instruction">上传您的音频文件以使用AI 智能变声器进行变声处理。\n支持的格式包括 MP3、WAV 和 AAC，最大\n文件大小为100MB，以获得最佳性能。</string>
    <string name="home">首页</string>
    <string name="audio">音频</string>
    <string name="converter">变声器</string>
    <string name="stats">统计</string>
    <string name="profile">我的</string>
    <string name="models_choice">声音选择</string>
    <string name="menu">菜单</string>
    <string name="search">搜索</string>
    <string name="search_music">搜索音乐</string>
    <string name="headphones">耳机</string>
    <string name="late_night">夜深了</string>
    <string name="crown">皇冠</string>
    <string name="vip_subscription">VIP ¥0.03/天, 开通VIP</string>
    <string name="hot_songs">热歌榜</string>
    <string name="cloud_music_top_chart">云音乐官方top排行榜</string>
    <string name="play">播放</string>
    <string name="calendar_day">日历日</string>
    <string name="daily_recommendation">每日推荐</string>
    <string name="fresh_songs_for_your_taste">符合你口味的新鲜好歌</string>
    <string name="free_to_listen">免费听</string>
    <string name="recommended_playlists">推荐歌单</string>
    <string name="more">更多</string>
    <string name="arrow_right">向右箭头</string>
    <string name="playlist_cover">播放列表封面</string>
    <string name="awesome_english_songs_playlist">好听到炸的英文歌单！！！好歌单...</string>
    <string name="deep_night_emo_songs">深夜emo伤感 | 片刻的幸福都有代价</string>
    <string name="folk_music_100_songs">【民谣盛宴】100首必听欧美民谣</string>
    <string name="best_english_songs">【欧美】最好听的英文歌曲合集</string>
    <string name="new_villagers_favorites">新村民都爱听</string>
    <string name="song_cover">歌曲封面</string>
    <string name="jump_machine">跳楼机</string>
    <string name="thousands_played_yesterday">昨日万人播放</string>
    <string name="lbj_libi">LBJ利比</string>
    <string name="only_one">唯一</string>
    <string name="hi_res">Hi-Res</string>
    <string name="gem_deng_ziqi">G.E.M.邓紫棋</string>
    <string name="so">于是</string>
    <string name="sq">SQ</string>
    <string name="deng_runze">邓润泽</string>
    <string name="only_one_with_artist">唯一 - G.E.M.邓紫棋</string>
    <string name="tap_to_expand_player">点击展开播放器</string>
    <string name="next">下一首</string>
    <string name="playlist">播放列表</string>
    <string name="recommend">推荐</string>
    <string name="discover">发现</string>
    <string name="explore">漫游</string>
    <string name="notes">笔记</string>

    <string name="start_recording">开始录音</string>
    <string name="stop_recording">停止录音</string>
    <string name="upload_audio_file">上传音频文件</string>

    <string name="start_recording">开始录音</string>
    <string name="stop_recording">停止录音</string>
    <string name="upload_audio_file">上传音频文件</string>

</resources>